RESOLVED FIXED285006
AX: AXPropertyName::CanSetSelectedAttribute is not updated when element enabled state changes
https://bugs.webkit.org/show_bug.cgi?id=285006
Summary AX: AXPropertyName::CanSetSelectedAttribute is not updated when element enabl...
Tyler Wilcock
Reported 2024-12-19 21:16:57 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-19 21:17:07 PST
Tyler Wilcock
Comment 2 2024-12-19 21:23:32 PST
EWS
Comment 3 2024-12-20 12:23:12 PST
Committed 288181@main (417e6ae394e1): <https://commits.webkit.org/288181@main> Reviewed commits have been landed. Closing PR #38255 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.