AX: AXPropertyName::CanSetSelectedAttribute is not updated when element enabled state changes https://bugs.webkit.org/show_bug.cgi?id=285006 rdar://141800770

Reviewed by Chris Fleizach.

When an element's enabled state changes, all descendants need to re-compute whether they can set AXSelected
(AXPropertyName::CanSetSelectedAttribute).

* LayoutTests/accessibility/dynamic-aria-disabled-can-set-selected-expected.txt: Added.
* LayoutTests/accessibility/dynamic-aria-disabled-can-set-selected.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperties):

Canonical link: https://commits.webkit.org/288181@main